--- a/source/scss/global/global.scss
+++ b/source/scss/global/global.scss
@@ -23,8 +23,8 @@ body {
   font-family: $main-font;
   min-width: $width-min;
   font-size: 16px;
-  font-weight: 400;
-  line-height: 21px;
+  line-height: 1.2;
+  font-weight: normal;
   color: $main-font-color;
   background-color: #ffffff;
 }
@@ -35,10 +35,9 @@ main {
 
 .container {
   position: relative;
-  min-width: 280px;
-  max-width: 1440px;
+  max-width: 1060px;
   margin: 0 auto;
-  padding: 0 150px;
+  padding: 0 100px;
   display: flex;
   flex-direction: column;
   background-color: transparent;
@@ -59,12 +58,6 @@ main {
   max-width: 1440px;
   position: relative;
   margin: 0 auto;
-}
-
-.container--model {
-  padding-right: 0;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
 .visually-hidden:not(:focus):not(:active),
