--- a/source/scss/components/btn.scss
+++ b/source/scss/components/btn.scss
@@ -1,24 +1,24 @@
 .btn {
-  @include transition(box-shadow);
+  @include btn-reset;
   display: inline-block;
   vertical-align: top;
-  padding: 10px 25px;
+  padding: 14px 39px;
   color: #ffffff;
-  text-align: center;
-  box-shadow: 0 4px 10px rgba(98, 110, 122, 0.2);
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
   border: 0;
-  border-radius: 50px;
   word-break: break-all;
-  transition: all 0.3s ease;
-  line-height: 21px;
   letter-spacing: 0;
-  max-width: 300px;
   white-space: normal;
+  text-transform: uppercase;
 
-  &:hover {
-    @include transition(box-shadow);
-    box-shadow: 0 4px 20px rgba(98, 110, 122, 0.3);
+  &--intro {
+    background-color: $main-accent-color;
+    flex-shrink: 0;
   }
+
+  @include scale;
 
   &:active {
     box-shadow: none;
