--- a/source/scss/global/global.scss
+++ b/source/scss/global/global.scss
@@ -2,10 +2,11 @@
   box-sizing: border-box;
 }
 
-// ::selection {
-//   background-color: $select-hover-color;
-//   color: $btn-font-color;
-// }
+::selection {
+  background-color: black;
+  color: white;
+  text-shadow: none;
+}
 
 a {
   text-decoration: none;
@@ -14,6 +15,7 @@ a {
 img {
   max-width: 100%;
   height: auto;
+  user-select: none;
 }
 
 body {
@@ -38,9 +40,12 @@ main {
   max-width: 1060px;
   margin: 0 auto;
   padding: 0 100px;
-  display: flex;
-  flex-direction: column;
   background-color: transparent;
+
+  &--flex {
+    display: flex;
+    flex-direction: column;
+  }
 
   @include tablet {
     padding-left: 40px;
