--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -19,6 +19,10 @@
   align-items: center;
   justify-content: space-between;
   padding-top: 56px;
+
+  @include tablet {
+    padding-top: 20px;
+  }
 }
 
 .header__list {
@@ -29,13 +33,16 @@
 
 .header__logo {
   @include mobile {
-    width: 100%;
+    width: 50%;
     margin: 10px 40px 40px 0;
+    align-self: baseline;
   }
 
   .header__logo-link {
     flex-shrink: 0;
     display: block;
+    height: auto;
+    min-width: 100px;
 
     .header__logo-pic {
       @include transitionMulty(fill, transform);
@@ -46,12 +53,13 @@
         @include transitionMulty(fill, transform);
         fill: $main-accent-color;
       }
-
-      @include mobile {
-        width: 30%;
-        height: auto;
-      }
     }
+  }
+}
+
+.header__nav {
+  @include mobile {
+    order: 2;
   }
 }
 
@@ -91,5 +99,104 @@
   &:active {
     @include transition(background-color);
     background-color: $main-accent-color;
+  }
+}
+
+.header__burger {
+  display: none;
+  width: 40px;
+  height: 28px;
+  position: relative;
+  cursor: pointer;
+  align-self: center;
+  flex-shrink: 0;
+
+  @include tablet {
+    display: block;
+    order: 1;
+    align-self: baseline;
+  }
+}
+
+.burger__line {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #ffffff;
+  position: absolute;
+  left: 0;
+
+  &--1 {
+    top: 0;
+  }
+
+  &--2 {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  &--3 {
+    bottom: 0;
+  }
+}
+
+// ///////////////////////     styles for nav burger on mobile        /////////////////////////// //
+
+@include tablet {
+  .header__nav {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #000000;
+    z-index: 10;
+    padding: 75px;
+    transform: translateX(100%);
+
+    &--active {
+      transition: transform 0.2s linear;
+      transform: translateX(0);
+    }
+  }
+
+  .header__item {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 30px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  .header__link {
+    font-size: 42px;
+    line-height: 48px;
+  }
+
+  .header__nav-close {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 11;
+  }
+
+  .header__nav-close-line {
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    position: absolute;
+    top: 50%;
+
+    &:first-child {
+      transform: translateY(-50%) rotate(45deg);
+    }
+    &:last-child {
+      transform: translateY(-50%) rotate(-45deg);
+    }
   }
 }
