--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -9,6 +9,7 @@
   font-size: 16px;
   line-height: 24px;
   color: #ffffff;
+  //padding-bottom: 223px;
 
   img {
     // max-width: 100%;
@@ -28,9 +29,9 @@
 
     @include laptop {
       min-height: 1000px;
+      position: relative;
     }
   }
-
   fieldset {
     @include fieldset-reset;
   }
@@ -38,12 +39,17 @@
 
 .intro__img-wrapper {
   position: relative;
-  padding-bottom: 59%;
+  padding-bottom: 69%;
+
+  @include laptop {
+    min-height: 1000px;
+    padding-bottom: 0;
+  }
 }
 
 .intro__wrapper {
   position: absolute;
-  padding-top: 280px;
+  margin-top: 229px;
   top: 0;
   left: 0;
   width: 100%;
