--- a/source/scss/global/global.scss
+++ b/source/scss/global/global.scss
@@ -98,3 +98,28 @@ picture {
   visibility: hidden;
   white-space: nowrap;
 }
+
+.section-title {
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 42px;
+  position: relative;
+  padding-bottom: 10px;
+
+  &::after {
+    display: block;
+    content: "";
+    width: 253px;
+    height: 3px;
+    background-color: #006dfe;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+}
+
+.section-wrapper {
+  max-width: 1262px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
