touch-action: none;

--- a/source/scss/blocks/benefits.scss
+++ b/source/scss/blocks/benefits.scss
@@ -91,7 +91,8 @@
   overflow: visible;
   margin-bottom: 37px;
   cursor: pointer;
-  @include scale;
+  transition: transform 0.2s linear;
+  touch-action: none;
 
   &--1 {
     background: transparent url(../img/svg/benefits01.svg) no-repeat left 34px;
@@ -127,6 +128,11 @@
     background-size: 77px;
     background-position: center 34px;
     padding-top: 114px;
+  }
+
+  &:hover {
+    transition: transform 0.2s linear;
+    transform: scale(1.03);
   }
 }
 
