videos and footer section

--- a/source/scss/global/mixins.scss
+++ b/source/scss/global/mixins.scss
@@ -200,3 +200,8 @@
     @content;
   }
 }
+// использование
+// &:hover {
+//   transition: transform 0.2s linear;
+//   transform: scale(1.03);
+// }
