--- a/source/scss/global/variables.scss
+++ b/source/scss/global/variables.scss
@@ -4,6 +4,7 @@ $main-font-color: #102746;
 $main-bg-color: #f4f4f9;
 $main-accent-color: #006dfe;
 $accent-color: #cc0000;
+$footer-color: #0e1d28;
 
 //fonts
 
