--- a/source/scss/components/btn.scss
+++ b/source/scss/components/btn.scss
@@ -24,3 +24,43 @@
     box-shadow: none;
   }
 }
+
+#top-button {
+  position: fixed;
+  top: 50vh;
+  right: 4vw;
+  display: inline-block;
+  background-color: white;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  z-index: 1000;
+  transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
+  opacity: 0;
+  visibility: hidden;
+  cursor: pointer;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -8px;
+    margin-top: -12px;
+    height: 0;
+    width: 0;
+    border: 8px solid transparent;
+    border-bottom-color: black;
+  }
+
+  &:hover {
+    background-color: rgba($color: black, $alpha: 0.3);
+  }
+
+  &.show {
+    opacity: 1;
+    visibility: visible;
+  }
+}
